Fixed issue where figure element would be wider than viewport on small screens

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -359,7 +359,7 @@ form {
 // Images
 
 figure {
-	width: 100%;
+	width: 96%;
 	clear: both;
 	text-align: center;
 	border-top: 1px solid @light-grey;
